# fullstack-fastapi-rag-sample

./: .env.local  .gitignore  README.md
.github/workflows/: backend_ci_cd.yml  ci_cd.yml  frontend_ci_cd.yml
backend/: .dockerignore  .gitignore  README.md  backend.dockerfile  nginx_unit_config.json  pyproject.toml
backend/src/: main.py
backend/src/api/api_v1/: api.py
backend/src/api/api_v1/endpoints/: hellow.py
backend/src/api/api_v1/routers/: hellow.py  query.py
backend/src/core/: __init__.py  config.py  index_builder.py  logging.py
frontend/: README.md  build_image.sh  frontend.dockerfile  package-lock.json  package.json  vite.config.ts
frontend/.github/workflows/: ci_cd.yml
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AppBar.vue  AuthCallbackPage.vue  UserLogin.vue  UserLogout.vue  UserSignUp.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  RagView.vue
